Fix publications formatting and remove thumbnail spacing

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -28,7 +28,7 @@
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
-    text-align: right;
+    text-align: left;
   }
 
   ol.bibliography {
